# rotations

./: CMakeLists.txt  README.md  axisAngle.hpp  doc.ipynb  main.cpp  matrix.hpp  quaternion.hpp  test.hpp  testCompatibility.hpp
